# masscalculator-cli

./: CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: cmake.yml
cmake/: install.cmake
conan/: conanfile.txt
docs/: BUILD.md  ENVIRONMENT.md  SETUP.md
executables/: CMakeLists.txt
executables/masscalculator-cli/: CMakeLists.txt
executables/masscalculator-cli/config/: software_version.h.in
masscalculator-cli/: masscalculator-cli.cc
tools/: envsetup.sh
